--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ img {
 /* blue wave header image */
 #header {
 	clear:right;
-	background-image:url(images/header2.png);
+	background-image:url(images/header.png);
 	background-repeat:no-repeat;
 	text-align:left;
 }
